# tp-teste-de-software

./: .gitignore  Makefile  README.md  psycopg2-2.9.6-cp311-cp311-linux_x86_64.whl
backend/pluto/: .gitignore  Makefile  README.md  pyproject.toml
backend/pluto/pluto/: config.yaml  main.py
backend/pluto/pluto/_internal/adapters/: expense_service.py  income_service.py  storemgr.py  user_service.py
backend/pluto/pluto/_internal/config/: config.py  error.py
backend/pluto/pluto/_internal/dash/: utils.py
backend/pluto/pluto/_internal/dash/exp_and_inc/: callbacks.py  layout.py
backend/pluto/pluto/_internal/dash/expenses/: callbacks.py
backend/pluto/pluto/_internal/dash/incomes/: callbacks.py
backend/pluto/pluto/_internal/domain/model/: expense.py  income.py  user.py
backend/pluto/pluto/_internal/log/: log.py
backend/pluto/pluto/_internal/server/: flask_server.py  server.py  utils.py
backend/pluto/pluto/_internal/utils/: dataclass.py  encoding.py  id.py
backend/pluto/tests/: conftest.py
backend/pluto/tests/_internal/: mocks.py
backend/pluto/tests/_internal/adapters/: test_expense_service.py  test_income_service.py  test_storemgr.py  test_storemgr_integ.py
backend/pluto/tests/_internal/config/: test_config.py
backend/pluto/tests/_internal/dash/: test_dash_utils.py
backend/pluto/tests/_internal/server/: test_flask_server_integr.py
backend/pluto/tests/_internal/utils/: test_dataclass.py
backend/pluto/tests/fixtures/: expense2.csv  expense3.csv  expense4.csv  expense_multiple.csv  expense_negative_amount.csv  incomes_valid.csv
(+77 files in other folders)
