[tool.poetry]
name = "pluto"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
psycopg2 = "2.8.6"
flask-cors = "^3.0.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
black = "^23.1.0"
mypy = "^1.1.1"
isort = "^5.12.0"
flake8 = "^6.0.0"
types-psycopg2 = "^2.9.21.9"
testing-postgresql = "^1.3.0"
sqlalchemy = "^2.0.9"
types-requests = "^2.30.0.0"
requests = "^2.30.0"
dash = "^2.10.0"
pandas = "^2.0.1"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = "integtest: integration test"
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"